--- a/index.html
+++ b/index.html
@@ -35,8 +35,13 @@
         clashes with his fellow physicians, including his own diagnostic team, because many of his hypotheses about patients' illnesses are based on subtle or controversial insights. His flouting of hospital rules and procedures frequently leads him into
         conflict with his boss, hospital administrator and Dean of Medicine Dr. Lisa Cuddy (Lisa Edelstein).
     </p>
-    <div>
-        <img class="house" src="house.png" alt="dr.house"> </div>
+   <div>
+        <img class="house" src="house.png" alt="dr.house" usemap="#workmap">
+        <map name="workmap">
+            <area shape="default" href="https://www.youtube.com/watch?v=uAVAt5FV2uc">
+            
+          </map>
+    </div>
     <p>
         House's only true friend is Dr. James Wilson (Robert Sean Leonard), head of the Department of Oncology. During the first three seasons, House's diagnostic team consists of Dr. Robert Chase (Jesse Spencer), Dr. Allison Cameron (Jennifer Morrison) and Dr.
         Eric Foreman (Omar Epps). At the end of the third season, this team disbands. Rejoined by Foreman, House gradually selects three new team members: Dr. Remy "Thirteen" Hadley (Olivia Wilde), Dr. Chris Taub (Peter Jacobson) and Dr. Lawrence Kutner
